icons are visible for filetypes, need to reassess file naming in utilities

--- a/NCloud/NCloud/Views/Shared/Components/SharedDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/SharedDetailsTable/Table.cshtml
@@ -16,7 +16,7 @@
                         <details>
                             <summary>
                                 <span id="iconforitemtype">
-                                    <img src="@item.IconPath" width=" 20" height="20" class="item rounded align-bottom">
+                                    <img src="@item.IconPath" width=" 20" height="20" class="item align-bottom">
                                 </span>
                                 <a asp-action="Details" asp-route-folderName="@item.Info.Name" class="itemlink">@item.Info!.Name</a>
                             </summary>
@@ -72,7 +72,7 @@
                         <details>
                             <summary>
                                 <span id="iconforitemtype">
-                                    <img src="@item.IconPath" width=" 20" height="20" class="item rounded align-bottom">
+                                    <img src="@item.IconPath" width=" 20" height="20" class="item align-bottom">
                                 </span>
                                 <span class="itemlink">@item.Info!.Name</span>
                             </summary>
