icon loading fixed for files

--- a/NCloud/NCloud/Views/Editor/TextEditor.cshtml
+++ b/NCloud/NCloud/Views/Editor/TextEditor.cshtml
@@ -20,6 +20,8 @@
         height:"640",
         themes:"modern",
         skin: "oxide-dark",
-        content_css: "dark"
+        content_css: "dark",
+        branding: false,
+        promotion: false
     });
 </script>
