--- a/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
@@ -44,7 +44,7 @@
                         </li>
                         <li class="nav-item my-2">
                             <a asp-controller="Editor" asp-action="TextEditor" class="align-middle px-0 text-decoration-none text-dark">
-                                <span class="d-inline m-1"><img src="~/utilities/file-text-fill.svg" width="20" height="20" class="rounded" /></span> <span class="ms-1 d-none d-sm-inline">Text Editor</span>
+                                <span class="d-inline m-1"><img src="~/utilities/window.svg" width="20" height="20" class="rounded" /></span> <span class="ms-1 d-none d-sm-inline">Text Editor</span>
                             </a>
                         </li>
                         <li class="nav-item my-2">
